Updated NetisHR files

--- a/netishr/administrator_remuneration_paysets.html
+++ b/netishr/administrator_remuneration_paysets.html
@@ -415,7 +415,7 @@
                                                                         <th data-toggle="true">Code</th>
                                                                         <th data-toggle="true">Name</th>
                                                                         <th data-hide="all">Description</th>
-                                                                        <th data-hide="all">Pay slip item(s)</th>
+                                                                        <th data-hide="all">Pay item(s)</th>
                                                                         <th></th>
 
                                                                     </tr>
@@ -489,7 +489,7 @@
                                                                         <th data-toggle="true">Code</th>
                                                                         <th data-toggle="true">Name</th>
                                                                         <th data-hide="all">Description</th>
-                                                                        <th data-hide="all">Pay slip item(s)</th>
+                                                                        <th data-hide="all">Pay item(s)</th>
                                                                         <th></th>
 
                                                                     </tr>
