--- a/netishr/administrator_remuneration_payslipitems_new.html
+++ b/netishr/administrator_remuneration_payslipitems_new.html
@@ -23,7 +23,7 @@
 
     <div id="wrapper">
 
-                                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -509,10 +509,7 @@
                                             <td>
                                                 <td class="text-right">
                                                     <div class="btn-group">
-                                                        <button class="btn-white btn btn-xs">Archive</button>
-                                                    </div>
-                                                    <div class="btn-group">
-                                                        <button class="btn-white btn btn-xs">Delete</button>
+                                                        <button class="btn-white btn btn-xs">Remove</button>
                                                     </div>
 
                                                 </td>
@@ -533,11 +530,7 @@
                                             <td>
                                                 <td class="text-right">
                                                     <div class="btn-group">
-                                                        <button class="btn-white btn btn-xs">Archive</button>
-                                                    </div>
-
-                                                    <div class="btn-group">
-                                                        <button class="btn-white btn btn-xs">Delete</button>
+                                                        <button class="btn-white btn btn-xs">Remove</button>
                                                     </div>
                                                 </td>
                                             </td>
