Reports menu page and cost summaries reports

--- a/netishr/reports.html
+++ b/netishr/reports.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>NetisHR</title>
+    <title>NetisHR | Reports</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -370,13 +370,13 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Settings</h2>
+                            <h2>Reports</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="active">
-                                    <strong>Settings</strong>
+                                    <strong>Reports</strong>
                                 </li>
                             </ol>
                         </div>
@@ -390,229 +390,19 @@
                             <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
-                                        <h5 id="general">General</h5>
+                                        <h5 id="general">Payroll</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="administrator_general_settings.html">Settings</a>
-                                            <div class="small">Various general settings</div>
+                                        <div><a href="payroll_cost_summary.html">Costs summaries</a>
+                                            <div class="small">Total cost of one or more pay items</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="corporate_calendar.html">Corporate Annual Calendar</a>
-                                            <div class="small">Calendar of corporate events</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="option_data_type_configuration.html">Option Data Type Configuration</a>
-                                            <div class="small">Configure Option data type across application</div>
-                                        </div>
-                                        <p></p>
-                                        <div>
-                                            <a href="reports.html">Reports</a>
-                                            <div class="small">Various Reports</div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="organization">Organization</h5>
-                                        <div class="ibox-tools">
-                                            <!--<span class="label label-warning-light pull-right">10 Messages</span>-->
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <p></p>
-                                        <div><a href="administrator_organization_settings.html">Settings</a>
-                                            <div class="small">Settings for organization modules</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_groups.html">Groups</a>
-                                            <div class="small">Set up companies and branches</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="uploadjobtitles.html">Upload Job Titles</a>
-                                            <div class="small">Upload Job Titles</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="job">Job</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="administrator_job_settings.html">Settings</a>
-                                            <div class="small">Various settings for Job</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_job_wla.html">Workload Analysis</a>
-                                            <div class="small">Settings for workload analysis</div>
-                                        </div>
-                                        <p></p>
-                                        <!--
-                                        <div><a href="administrator_group_competency.html">Group Competency Settings</a>
-                                            <div class="small">Settings for Group Competency</div>
-                                        </div>
--->
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="person">Person</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <a href="administrator_persons_information.html">Persons Information</a>
-                                        <div class="small">Information configuration for person information</div>
-                                        <p></p>
-                                        <a href="#">Upload Staffs</a>
-                                        <div class="small">Upload Staffs</div>
-                                        <p></p>
-                                        <a href="#.html">Upload Applicants</a>
-                                        <div class="small">Upload Applicants</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4">
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="recruitment">Recruitment</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <a href="uploadapplicants.html">Upload Applicants</a>
-                                        <div class="small">Upload Person information</div>
-                                        <p></p>
-                                        <a href="selectionstagesetting.html">Selection Stage Setting</a>
-                                        <div class="small">Selection Stage Setting</div>
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="performance">Performance</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="administrator_performance_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="performance_mgmt_periods.html">Performance Management Periods</a>
-                                            <div class="small">Manage performance management periods</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_performance_evaluation.html">Performance Evaluation Settings</a>
-                                            <div class="small">Rules for achievement percentages, results and rating</div>
-                                        </div>
-
-
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="training">Training</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="administrator_training_configuration_settings.html">Settings</a>
-                                            <div class="small">Various settings for Training</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_training_courses.html">Courses</a>
-                                            <div class="small">Manage training courses</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_training_curriculum.html">Curriculums</a>
-                                            <div class="small">Settings training curriculums</div>
-                                        </div>
-                                        <p></p>
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="career">Career</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="administrator_career_settings.html">Settings</a>
-                                            <div class="small">Career policy settings</div>
-                                        </div>
-                                        <p>
-                                        </p>
-                                    </div>
-                                </div>
                             </div>
                             <div class="col-lg-4">
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="remuneration">Remuneration</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="administrator_remuneration_settings.html">Settings</a>
-                                            <div class="small">Various settings for Renumeration</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_remuneration_payitems.html">Pay Items</a>
-                                            <div class="small">Items to be calculated in salary</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_remuneration_payslipitems.html">Payslip Items</a>
-                                            <div class="small">Items to be shown on payslip</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_remuneration_paysets.html">Paysets</a>
-                                            <div class="small">Create pay sets with pay items</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_remuneration_payslips.html">Payslips</a>
-                                            <div class="small">Create payslip with payslip items</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_remuneration_payassignment.html">Payset/payslip assignment</a>
-                                            <div class="small">Assign pay set and payslip to a person</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="uploadpayrollspecification.html">Upload Payroll Specification</a>
-                                            <div class="small">Upload Payroll Specification</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="uploadpayrollassignment.html">Upload Payroll Assignment</a>
-                                            <div class="small">Upload Payroll Assignment</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="administrator_leave_configuration.html">Leave Configuration</a>
-                                            <div class="small">Leave Configuration</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="administration">Administration</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div>
-                                            <a href="administrator_shift_settings.html">Settings</a>
-                                            <div class="small">Various settings for shift</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Personnel Administration</a>
-                                            <div class="small">Settings for policy</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="workshiftgroup.html">Work Shift Group</a>
-                                            <div class="small">Settings for policy</div>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -621,7 +411,7 @@
                             <strong>Version</strong> 2.x.xxxx.
                         </div>
                         <div>
-                            <strong>Copyright</strong> Netika Indonesia &copy; 2016
+                            <strong>Copyright</strong> Netika Indonesia &copy; 2017
                         </div>
                     </div>
                 </div>
