Updated NetisHR files

--- a/netishr/payroll_cost_summary.html
+++ b/netishr/payroll_cost_summary.html
@@ -513,7 +513,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="form-group">
-                                    <button type="button" class="btn btn btn-primary pull-right"> <i class="fa fa-search"></i> Search</button>
+                                    <button type="button" class="btn btn btn-primary pull-right">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -533,11 +533,11 @@
                                             <table class="table table-hover table-stripped toggle-arrow-tiny">
                                                 <thead>
                                                     <tr>
-                                                        <th data-toggle="true">ID</th>
-                                                        <th data-toggle="true">Name</th>
-                                                        <th data-hide="all">BPJS-JHTP - Tunjangan BPJS TK (JHT-P)</th>
-                                                        <th data-hide="all">BPJS-JKK - Tunjangan BPJS TK (JKK)</th>
-                                                        <th data-toggle="true">Total</th>
+                                                        <th width="20%" data-toggle="true">ID</th>
+                                                        <th width="20%" data-toggle="true">Name</th>
+                                                        <th width="20%" data-hide="all">BPJS-JHTP - Tunjangan BPJS TK (JHT-P)</th>
+                                                        <th width="20%" data-hide="all">BPJS-JKK - Tunjangan BPJS TK (JKK)</th>
+                                                        <th width="20%" data-toggle="true">Total</th>
 
                                                     </tr>
                                                 </thead>
@@ -562,20 +562,20 @@
                                             <table class="table table-hover table-stripped toggle-arrow-tiny">
                                                 <thead>
                                                     <tr>
-                                                        <th data-toggle="true"></th>
-                                                        <th data-toggle="true"></th>
-                                                        <th data-toggle="true"></th>
-                                                        <th data-toggle="true"></th>
-                                                        <th data-toggle="true"></th>
+                                                        <th width="20%" data-toggle="true"></th>
+                                                        <th width="20%" data-toggle="true"></th>
+                                                        <th width="20%" data-toggle="true"></th>
+                                                        <th width="20%" data-toggle="true"></th>
+                                                        <th width="20%" data-toggle="true"></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr>
                                                         <td></td>
-                                                        <td></td>
-                                                        <td></td>
-
                                                         <td>Total</td>
+                                                        <td>501,450</td>
+
+                                                        <td>501,200</td>
                                                         <td>1,002,650</td>
                                                     </tr>
                                                 </tbody>
